// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`{'noPackageJsonTypings': 'error'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "off",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "error",
  "noRootLevelBrowser": "warn",
  "noRootLevelMain": "warn",
  "noRootLevelModule": "warn",
  "noRootLevelTypesVersions": "warn",
  "preferModuleType": "warn",
}
`;

exports[`{'noPackageJsonTypings': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "off",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "off",
  "noRootLevelBrowser": "warn",
  "noRootLevelMain": "warn",
  "noRootLevelModule": "warn",
  "noRootLevelTypesVersions": "warn",
  "preferModuleType": "warn",
}
`;

exports[`{'noPackageJsonTypings': 'warn'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "off",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "warn",
  "noRootLevelBrowser": "warn",
  "noRootLevelMain": "warn",
  "noRootLevelModule": "warn",
  "noRootLevelTypesVersions": "warn",
  "preferModuleType": "warn",
}
`;

exports[`{'noPackageJsonTypings': false}} 1`] = `
[ZodError: [
  {
    "code": "invalid_union",
    "unionErrors": [
      {
        "issues": [
          {
            "received": false,
            "code": "invalid_literal",
            "expected": "error",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": false,
            "code": "invalid_literal",
            "expected": "warn",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": false,
            "code": "invalid_literal",
            "expected": "off",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      }
    ],
    "path": [
      "strictOptions",
      "noPackageJsonTypings"
    ],
    "message": "Validation error: Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\", or Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\", or Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\""
  }
]]
`;

exports[`{'noPackageJsonTypings': true}} 1`] = `
[ZodError: [
  {
    "code": "invalid_union",
    "unionErrors": [
      {
        "issues": [
          {
            "received": true,
            "code": "invalid_literal",
            "expected": "error",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": true,
            "code": "invalid_literal",
            "expected": "warn",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": true,
            "code": "invalid_literal",
            "expected": "off",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      }
    ],
    "path": [
      "strictOptions",
      "noPackageJsonTypings"
    ],
    "message": "Validation error: Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\", or Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\", or Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\""
  }
]]
`;

exports[`{'noRootLevelBrowser': 'error'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "off",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "error",
  "noRootLevelBrowser": "error",
  "noRootLevelMain": "warn",
  "noRootLevelModule": "warn",
  "noRootLevelTypesVersions": "warn",
  "preferModuleType": "warn",
}
`;

exports[`{'noRootLevelBrowser': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "off",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "error",
  "noRootLevelBrowser": "off",
  "noRootLevelMain": "warn",
  "noRootLevelModule": "warn",
  "noRootLevelTypesVersions": "warn",
  "preferModuleType": "warn",
}
`;

exports[`{'noRootLevelBrowser': 'warn'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "off",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "error",
  "noRootLevelBrowser": "warn",
  "noRootLevelMain": "warn",
  "noRootLevelModule": "warn",
  "noRootLevelTypesVersions": "warn",
  "preferModuleType": "warn",
}
`;

exports[`{'noRootLevelMain': 'error'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "off",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "error",
  "noRootLevelBrowser": "warn",
  "noRootLevelMain": "error",
  "noRootLevelModule": "warn",
  "noRootLevelTypesVersions": "warn",
  "preferModuleType": "warn",
}
`;

exports[`{'noRootLevelMain': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "off",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "error",
  "noRootLevelBrowser": "warn",
  "noRootLevelMain": "off",
  "noRootLevelModule": "warn",
  "noRootLevelTypesVersions": "warn",
  "preferModuleType": "warn",
}
`;

exports[`{'noRootLevelMain': 'warn'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "off",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "error",
  "noRootLevelBrowser": "warn",
  "noRootLevelMain": "warn",
  "noRootLevelModule": "warn",
  "noRootLevelTypesVersions": "warn",
  "preferModuleType": "warn",
}
`;

exports[`{'noRootLevelMain': true}} 1`] = `
[ZodError: [
  {
    "code": "invalid_union",
    "unionErrors": [
      {
        "issues": [
          {
            "received": true,
            "code": "invalid_literal",
            "expected": "error",
            "path": [
              "strictOptions",
              "noRootLevelMain"
            ],
            "message": "Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noRootLevelMain\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": true,
            "code": "invalid_literal",
            "expected": "warn",
            "path": [
              "strictOptions",
              "noRootLevelMain"
            ],
            "message": "Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noRootLevelMain\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": true,
            "code": "invalid_literal",
            "expected": "off",
            "path": [
              "strictOptions",
              "noRootLevelMain"
            ],
            "message": "Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noRootLevelMain\\""
          }
        ],
        "name": "ZodError"
      }
    ],
    "path": [
      "strictOptions",
      "noRootLevelMain"
    ],
    "message": "Validation error: Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noRootLevelMain\\" at \\"strictOptions.noRootLevelMain\\", or Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noRootLevelMain\\" at \\"strictOptions.noRootLevelMain\\", or Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noRootLevelMain\\" at \\"strictOptions.noRootLevelMain\\""
  }
]]
`;

exports[`{'noRootLevelModule': 'error'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "off",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "error",
  "noRootLevelBrowser": "warn",
  "noRootLevelMain": "warn",
  "noRootLevelModule": "error",
  "noRootLevelTypesVersions": "warn",
  "preferModuleType": "warn",
}
`;

exports[`{'noRootLevelModule': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "off",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "error",
  "noRootLevelBrowser": "warn",
  "noRootLevelMain": "warn",
  "noRootLevelModule": "off",
  "noRootLevelTypesVersions": "warn",
  "preferModuleType": "warn",
}
`;

exports[`{'noRootLevelModule': 'warn'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "off",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "error",
  "noRootLevelBrowser": "warn",
  "noRootLevelMain": "warn",
  "noRootLevelModule": "warn",
  "noRootLevelTypesVersions": "warn",
  "preferModuleType": "warn",
}
`;

exports[`{'noRootLevelTypesVersions': 'error'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "off",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "error",
  "noRootLevelBrowser": "warn",
  "noRootLevelMain": "warn",
  "noRootLevelModule": "warn",
  "noRootLevelTypesVersions": "error",
  "preferModuleType": "warn",
}
`;

exports[`{'noRootLevelTypesVersions': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "off",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "error",
  "noRootLevelBrowser": "warn",
  "noRootLevelMain": "warn",
  "noRootLevelModule": "warn",
  "noRootLevelTypesVersions": "off",
  "preferModuleType": "warn",
}
`;

exports[`{'noRootLevelTypesVersions': 'warn'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "off",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "error",
  "noRootLevelBrowser": "warn",
  "noRootLevelMain": "warn",
  "noRootLevelModule": "warn",
  "noRootLevelTypesVersions": "warn",
  "preferModuleType": "warn",
}
`;

exports[`{'preferModuleType': 'error'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "off",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "error",
  "noRootLevelBrowser": "warn",
  "noRootLevelMain": "warn",
  "noRootLevelModule": "warn",
  "noRootLevelTypesVersions": "warn",
  "preferModuleType": "error",
}
`;

exports[`{'preferModuleType': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "off",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "error",
  "noRootLevelBrowser": "warn",
  "noRootLevelMain": "warn",
  "noRootLevelModule": "warn",
  "noRootLevelTypesVersions": "warn",
  "preferModuleType": "off",
}
`;

exports[`{'preferModuleType': 'warn'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "off",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "error",
  "noRootLevelBrowser": "warn",
  "noRootLevelMain": "warn",
  "noRootLevelModule": "warn",
  "noRootLevelTypesVersions": "warn",
  "preferModuleType": "warn",
}
`;
